--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
-node_modules
-platforms
-hooks
+node_modules/
+platforms/
+hooks/
 app/**/*.js
 app/**/*.js.map
-.tmp
-.idea
-.vscode
+.tmp/
+.idea/
+.vscode/
+tmp/
+typings/
